--- a/Air-monitoring-new/manifest.json
+++ b/Air-monitoring-new/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "atmosphere-monitoring-widget",
+  "name": "Air-monitoring-new",
   "type": "widget",
   "version": "1.0.0",
   "exbVersion": "1.12.0",
